--- a/GreenishWarblerGenomics2023.qmd
+++ b/GreenishWarblerGenomics2023.qmd
@@ -294,7 +294,7 @@ This is calculated according to Weir&Cockerham1984 (with sample size and pop num
 
 function rollingMean(inputVector, windowSize)
     numWindows = length(inputVector) ÷ windowSize  # this is the quotient (rounds to integer)
-    rollingMeans = Vector{Float32}(undef, numWindows) # set up place to store data
+    rollingMeans = Vector{Float64}(undef, numWindows) # set up place to store data
     for i in 1:numWindows
         start = 1 + (i-1)*windowSize
         windowValues = inputVector[start : (start + windowSize - 1)]  # this ignores the NaN values
@@ -310,7 +310,7 @@ end
 
 function getWindowedFst(FstNumerator, FstDenominator, pos, windowSize)
     rollingMeanPos = rollingMean(pos.position, windowSize) # get per-window mean SNP position along scaffold
-    rollingMeanFst = Array{Float32, 2}(undef, size(FstNumerator, 1), length(rollingMeanPos))
+    rollingMeanFst = Array{Float64, 2}(undef, size(FstNumerator, 1), length(rollingMeanPos))
     for i in 1:size(FstNumerator, 1)
         rollingMeanFstNumerator = rollingMean(FstNumerator[i,:], windowSize)
         rollingMeanFstDenominator = rollingMean(FstDenominator[i,:], windowSize)
@@ -322,16 +322,16 @@ function getWindowedFst(FstNumerator, FstDenominator, pos, windowSize)
     # My rollingMean function is designed to ignore NaN values, or return NaN if there are no real values.
 end
 
-chrom = "gw26"
-regionText = string("chr", chrom)
-loci_selection = (pos_SNP_filtered.chrom .== chrom)
-pos_region = pos_SNP_filtered[loci_selection, :]
-FstNumerator_region = FstNumerator[:, loci_selection]
-FstDenominator_region = FstDenominator[:, loci_selection]
+# chrom = "gw26"
+# regionText = string("chr", chrom)
+# loci_selection = (pos_SNP_filtered.chrom .== chrom)
+# pos_region = pos_SNP_filtered[loci_selection, :]
+# FstNumerator_region = FstNumerator[:, loci_selection]
+# FstDenominator_region = FstDenominator[:, loci_selection]
 
-windowSize = 1000
+# windowSize = 1000
 
-windowedPos, windowedFst = getWindowedFst(FstNumerator_region, FstDenominator_region, pos_region, windowSize)
+# windowedPos, windowedFst = getWindowedFst(FstNumerator_region, FstDenominator_region, pos_region, windowSize)
 
 plot(windowedPos, windowedFst[1,:])
 
@@ -341,7 +341,6 @@ windowSize = 1000
 
 windowed_pos_all = DataFrame(chrom = String[], mean_position = Float64[])
 windowed_Fst_all = Array{Float32, 2}(undef, size(FstNumerator, 1), 0)
-
 for chrom in scaffolds_for_Fst
     regionText = string("chr", chrom)
     loci_selection = (pos_SNP_filtered.chrom .== chrom)
@@ -355,11 +354,233 @@ for chrom in scaffolds_for_Fst
 end
 
 plot(windowed_pos_all.mean_position, windowed_Fst_all[1,:])
+```
+
+The above has produced windowed Fst values across the whole genome, for each population comparison. These are stored in `windowed_Fst_all` and the location info is stored in `windowed_pos_all`.
+
+Now make a plot of windowed Fst across all scaffolds:
+
+```{julia}
+
+scaffolds_to_plot = scaffolds_for_Fst
+
+groupsToPlotFst = ["vir_troch_LN", "troch_LN_plumb", "vir_plumb"]
+groupColorsFst = ["green3", "orange", "purple"]
+function plotGenomeFst(scaffolds_to_plot, 
+                        windowed_Fst_all,
+                        windowed_pos_all,
+                        groupsToPlotFst,
+                        groupColorsFst;
+                        lineTransparency = 0.8,
+                        fillTransparency = 0.2
+                        figureSize=(1200, 1200))
+    f = CairoMakie.Figure(resolution=figureSize)
+    # get sizes of chromosomes (note this actually isn't the true length, just the mean position of the rightmost window):
+    scaffold_lengths = repeat([-1], length(scaffolds_to_plot))	# vector of Int64
+    for i in 1:length(scaffolds_to_plot)
+        selection = windowed_pos_all.chrom .== scaffolds_to_plot[i]
+        if sum(selection) == 0
+            scaffold_lengths[i] = 0
+        else
+            scaffold_lengths[i] = round(Int, maximum(windowed_pos_all.mean_position[selection]))
+        end
+    end
+
+    # my plan is to use the layout feature of Makie to make one axis per row, and then plot
+    # multiple scaffolds to each row
+
+    scaffoldPlottedAlready = falses(length(scaffolds_to_plot))
+    bpPerRow = 200_000_000
+    bpGapBetweenScaffolds = 10_000_000
+    scaffoldInRow = Vector{Vector{String}}() # declare a vector of vectors to store the chromosome names per row
+    scaffoldBpStartInRow = Vector{Vector{Int}}()
+    row = 1
+
+    while sum(scaffoldPlottedAlready .== false) > 0  # repeat until all chr have a row to be plotted in
+        bpStart = 1
+        remainingRowLength = bpPerRow
+        push!(scaffoldInRow, []) # initialize an empty vector for the next row
+        push!(scaffoldBpStartInRow, []) # initialize an empty vector for the next row
+        placeInRow = 1
+        # look through chromosomes and find some to go in this row
+        for i in 1:length(scaffolds_to_plot)
+            # if not plotted and short enough, add to row:
+            if scaffoldPlottedAlready[i] .== false .&& scaffold_lengths[i] .<= remainingRowLength
+                push!(scaffoldInRow[row], scaffolds_to_plot[i])
+                push!(scaffoldBpStartInRow[row], bpStart)
+                remainingRowLength = remainingRowLength - scaffold_lengths[i] - bpGapBetweenScaffolds
+                scaffoldPlottedAlready[i] = true
+                placeInRow += 1
+                bpStart = bpStart + scaffold_lengths[i] + bpGapBetweenScaffolds
+            end	
+        end
+        row += 1
+    end
+    println(scaffoldInRow)
+
+# the above works. I have the scaffolds arranged for plotting.
+
+#######
+
+  
+  # make plot order by row
+  inch.per.row <- (window.width-(left.margin+right.margin)*window.width)
+  bp.per.row <- bp.per.inch * inch.per.row
+  row <- 1
+  chr.in.row <- matrix(NA, 20, 20)
+  chr.bp.start.in.row <- matrix(NA, 20, 20)
+  bp.start <- 0
+  remaining.row.length <- bp.per.row
+  while (sum(chr.plotted.already==FALSE) > 0) {  # repeat until all chr have a row to be plotted in
+    place.in.row <- 1
+    # look through chromosomes
+    for (i in 1:length(chromosomes.to.plot)) {
+      # if not plotted and short enough, add to row:
+      if (chr.plotted.already[i]==FALSE && chr.length[i]<=remaining.row.length) {
+        chr.in.row[row, place.in.row] <- chromosomes.to.plot[i]
+        chr.bp.start.in.row[row, place.in.row] <- bp.start
+        remaining.row.length <- remaining.row.length - chr.length[i] - gap.between.chr.bp
+        chr.plotted.already[i] <- TRUE
+        place.in.row <- place.in.row+1
+        bp.start <- bp.start + chr.length[i] + gap.between.chr.bp
+      }		
+    }
+    row <- row+1
+    bp.start <- 0
+    remaining.row.length <- bp.per.row
+  }
+
+end
+
+
 
 ```
 
+#########
+RCODE:
+# plot Genome-wide plot of windowed Fst
+# read files for each chromosome, and plot Fst, Dxy, and pi for each chromosome in a single window
+plotGenomeFstDxyPi <- function(base.name, tag.name, window_size, chromosomes.to.plot, 
+                               max_Dxy_axis, max_pi_axis, transparency_Fst_Dxy, transparency_pi, line_transparency,
+                               groups.to.plot.WC84_Fst, group.colors.WC84_Fst,
+                               groups.to.plot.Dxy, group.colors.Dxy,
+                               groups.to.plot.pi, group.colors.pi) {
+  #plot all chromosomes in one quartz window
+  # plot dimensions in inches:
+  window.width <- 12
+  window.height <- 12
+  # numbers below are in inches:
+  left.margin <- 1 / window.width  # the left outer margin of the figure (number is inches)
+  right.margin <- 1 / window.width
+  top.margin <- 0.5 / window.height
+  bottom.margin <- 0.5 / window.height
+  row.height <- 1 / window.height  # height of each row of the figure (row contains Fst, Dxy, and pi plot)
+  plot.height <- row.height / 3
+  row.space <- 0.25 / window.height  # gap between rows 
+  bp.per.inch <- 20000000  # number of bp of sequence per inch
+  gap.between.chr <- 0.6 # gap in inches between chromosomes plots
+  gap.between.chr.bp <- gap.between.chr*bp.per.inch
+  
+  # get sizes of chromosomes (note this actually isn't the true length, just the mean position of the rightmost window):
+  chr.length <- NULL	
+  for (i in 1:length(chromosomes.to.plot)) {
+    chr.text <- paste0("Chr",chromosomes.to.plot[i], "_whole", sep="")
+    #load(paste0("~/Dropbox/Darren's current work/genomics training 2014/GW_genomics_Darren/GW_SNP_summary_stats_by_chromosome_from_R/GW_SNP_RollingMean_stats_GW_Lane5_plus_Liz.45samples.troch_vir_plumb.",load.text,"_from_R.R"))
+    load(paste0(base.name,tag.name,chr.text,"_window",window_size,"_WindowStats_from_R.R"))
+    #chr.length[i] <- rolling.mean.pos.Fst[length(rolling.mean.pos.Fst)]
+    chr.length[i] <- rolling.mean.pos.WC84_Fst[length(rolling.mean.pos.WC84_Fst)]
+  }
+  
+  chr.plotted.already <- rep(FALSE, length(chromosomes.to.plot))
+  
+  # make plot order by row
+  inch.per.row <- (window.width-(left.margin+right.margin)*window.width)
+  bp.per.row <- bp.per.inch * inch.per.row
+  row <- 1
+  chr.in.row <- matrix(NA, 20, 20)
+  chr.bp.start.in.row <- matrix(NA, 20, 20)
+  bp.start <- 0
+  remaining.row.length <- bp.per.row
+  while (sum(chr.plotted.already==FALSE) > 0) {  # repeat until all chr have a row to be plotted in
+    place.in.row <- 1
+    # look through chromosomes
+    for (i in 1:length(chromosomes.to.plot)) {
+      # if not plotted and short enough, add to row:
+      if (chr.plotted.already[i]==FALSE && chr.length[i]<=remaining.row.length) {
+        chr.in.row[row, place.in.row] <- chromosomes.to.plot[i]
+        chr.bp.start.in.row[row, place.in.row] <- bp.start
+        remaining.row.length <- remaining.row.length - chr.length[i] - gap.between.chr.bp
+        chr.plotted.already[i] <- TRUE
+        place.in.row <- place.in.row+1
+        bp.start <- bp.start + chr.length[i] + gap.between.chr.bp
+      }		
+    }
+    row <- row+1
+    bp.start <- 0
+    remaining.row.length <- bp.per.row
+  }
+  
+  # Plot in the order defined above
+  
+  quartz(title="WC84_Fst, Dxy, and pi for all chromosomes", width=window.width, height=window.height)  # width and height in inches
+  # plot(x=NULL, y=NULL, xlim=c(0,1), ylim=c(0,1), xaxt='n', yaxt='n', xlab=NULL, ylab= NULL, bty='n', las=1)
+  Sys.sleep(0.1)  # this is to prevent a bug
+  num.rows <- sum(!is.na(chr.in.row[,1]))
+  new.fig.parameter <- FALSE
+  for (row.num in 1:num.rows) {
+    num.chr.in.row <- sum(!is.na(chr.in.row[row.num,]))
+    for (order.num in 1:num.chr.in.row) {
+      chr.text <- paste0("Chr",chr.in.row[row.num,order.num], "_whole", sep="")
+      #load(paste0("~/Dropbox/Darren's current work/genomics training 2014/GW_genomics_Darren/GW_SNP_summary_stats_by_chromosome_from_R/GW_SNP_RollingMean_stats_",load.text,"_from_R.R"))
+      load(paste0(base.name,tag.name,chr.text,"_window",window_size,"_WindowStats_from_R.R"))
+      print(paste0("Loaded saved rolling mean stats for Chr ", chr.in.row[row.num,order.num], sep=""))
+      plot.bp.length <- chr.length[chromosomes.to.plot==chr.in.row[row.num,order.num]]
+      # plot WC84_Fst:
+      fig.left.loc <- left.margin + (chr.bp.start.in.row[row.num,order.num]/bp.per.row)*(inch.per.row/window.width)   
+      fig.right.loc <- fig.left.loc + (plot.bp.length/bp.per.row)*(inch.per.row/window.width)
+      par(fig=c(fig.left.loc, fig.right.loc, 1-(top.margin+plot.height+(row.num-1)*(row.height+row.space)), 1-(top.margin+(row.num-1)*(row.height+row.space))), new = new.fig.parameter, mai=c(0,0,0,0), cex=0.5)  # mai sets the margins of the plot to zero, matching
+      new.fig.parameter <- TRUE
+      #upper.xlim <- bp.per.inch*(window.width-(left.margin+right.margin)*window.width)
+      plot(x=NULL, y=NULL, xlim=c(0, plot.bp.length), ylim=c(0, 1.2), yaxp=c(0, 1, n=1), ylab=expression(italic('F')[ST]*"  "), xlab=NA, xaxt='n', bty='n', las=1, xaxs="i", tcl=-0.25, xpd=NA, cex=1, cex.lab=1.55, cex.axis=0.75)
+      text(-2000000, 1.4, chr.in.row[row.num,order.num], pos=4, cex=2, xpd=NA)
+      for (j in 1:length(groups.to.plot.WC84_Fst)) {
+        color.rgb <- col2rgb(group.colors.WC84_Fst[j]) /255   # divide to convert color scales to 0-1
+        lines(rolling.mean.pos.WC84_Fst, rolling.mean.WC84_Fst[rownames(rolling.mean.WC84_Fst)==groups.to.plot.WC84_Fst[j],],
+              col=rgb(color.rgb[1], color.rgb[2], color.rgb[3], alpha=line_transparency))
+        xx <- c(rolling.mean.pos.WC84_Fst[1], rolling.mean.pos.WC84_Fst, rolling.mean.pos.WC84_Fst[length(rolling.mean.pos.WC84_Fst)])
+        yy <- c(0, rolling.mean.WC84_Fst[rownames(rolling.mean.WC84_Fst)==groups.to.plot.WC84_Fst[j],], 0)
+        polygon(xx, yy, col=rgb(color.rgb[1], color.rgb[2], color.rgb[3], alpha=transparency_Fst_Dxy), border=NA)
+      }
+      # plot Dxy:
+      y_label <- expression(pi[B]*"    ")                     # y_label <- expression(italic('D')[xy]*"    ")
+      par(fig=c(fig.left.loc, fig.right.loc, 1-(top.margin+2*plot.height+(row.num-1)*(row.height+row.space)), 1-(top.margin+plot.height+(row.num-1)*(row.height+row.space))), new = TRUE, mai=c(0,0,0,0))  # mai sets the margins of the plot to zero, matching
+      plot(x=NULL, y=NULL, xlim=c(0, plot.bp.length), ylim=c(0, max_Dxy_axis), yaxp=c(0, max_Dxy_axis*5/8, n=1), ylab=y_label, xlab=NA, xaxt='n', bty='n', las=1, xaxs="i", tcl=-0.25, xpd=NA, cex.lab=1.5, cex.axis=0.75)  # 
+      for (j in 1:length(groups.to.plot.Dxy)) {
+        color.rgb <- col2rgb(group.colors.Dxy[j]) /255   # divide to convert color scales to 0-1
+        lines(rolling.mean.pos.Dxy, rolling.mean.Dxy[rownames(rolling.mean.Dxy)==groups.to.plot.Dxy[j],], 
+              col=rgb(color.rgb[1], color.rgb[2], color.rgb[3], alpha=line_transparency))
+        xx <- c(rolling.mean.pos.Dxy[1], rolling.mean.pos.Dxy, rolling.mean.pos.Dxy[length(rolling.mean.pos.Dxy)])
+        yy <- c(0, rolling.mean.Dxy[rownames(rolling.mean.Dxy)==groups.to.plot.Dxy[j],], 0)
+        polygon(xx, yy, col=rgb(color.rgb[1], color.rgb[2], color.rgb[3], alpha=transparency_Fst_Dxy), border=NA)
+      }
+      # plot pi: 
+      par(fig=c(fig.left.loc, fig.right.loc, 1-(top.margin+3*plot.height+(row.num-1)*(row.height+row.space)), 1-(top.margin+2*plot.height+(row.num-1)*(row.height+row.space))), new = TRUE, mai=c(0,0,0,0))  # mai sets the margins of the plot to zero, matching
+      plot(x=NULL, y=NULL, xlim=c(0, plot.bp.length), ylim=c(0, max_pi_axis), yaxp=c(0, max_pi_axis*5/8, n=1), ylab=expression(pi[W]*"    "), xlab=NA, xaxt='n', bty='n', las=1, xaxs="i", tcl=-0.25, xpd=NA, cex.lab=1.5, cex.axis=0.75)
+      title(xlab="Location", outer=TRUE)
+      for (j in 1:length(groups.to.plot.pi)) {
+        color.rgb <- col2rgb(group.colors.pi[j]) /255   # divide to convert color scales to 0-1
+        lines(rolling.mean.pos.pi, rolling.mean.pi[rownames(rolling.mean.pi)==groups.to.plot.pi[j],], 
+              col=rgb(color.rgb[1], color.rgb[2], color.rgb[3], alpha=line_transparency))
+        xx <- c(rolling.mean.pos.pi[1], rolling.mean.pos.pi, rolling.mean.pos.pi[length(rolling.mean.pos.pi)])
+        yy <- c(0, rolling.mean.pi[rownames(rolling.mean.pi)==groups.to.plot.pi[j],], 0)
+        polygon(xx, yy, col=rgb(color.rgb[1], color.rgb[2], color.rgb[3], alpha=transparency_pi), border=NA)
+      }
+    }
+  }
+}                
 
 
+#########
 
 ## Estimate relationships of individuals using PCA
 
