--- a/GreenishWarblerGenomics2023.qmd
+++ b/GreenishWarblerGenomics2023.qmd
@@ -333,8 +333,6 @@ end
 
 # windowedPos, windowedFst = getWindowedFst(FstNumerator_region, FstDenominator_region, pos_region, windowSize)
 
-plot(windowedPos, windowedFst[1,:])
-
 windowSize = 1000
 
 # calculate windowed Fst across all scaffolds:
@@ -368,13 +366,14 @@ groupsToPlotFst = ["vir_troch_LN", "troch_LN_plumb", "vir_plumb"]
 groupColorsFst = ["green3", "orange", "purple"]
 function plotGenomeFst(scaffolds_to_plot, 
                         windowed_Fst_all,
+                        pairwiseNamesFst,
                         windowed_pos_all,
                         groupsToPlotFst,
                         groupColorsFst;
                         lineTransparency = 0.8,
                         fillTransparency = 0.2
                         figureSize=(1200, 1200))
-    f = CairoMakie.Figure(resolution=figureSize)
+    
     # get sizes of chromosomes (note this actually isn't the true length, just the mean position of the rightmost window):
     scaffold_lengths = repeat([-1], length(scaffolds_to_plot))	# vector of Int64
     for i in 1:length(scaffolds_to_plot)
@@ -418,36 +417,118 @@ function plotGenomeFst(scaffolds_to_plot,
     end
     println(scaffoldInRow)
 
-# the above works. I have the scaffolds arranged for plotting.
+    # the above works. I have the scaffolds arranged for plotting.
 
-#######
+    # Plot in the order defined above
+    f = CairoMakie.Figure(backgroundcolor = RGBf(0.5, 0.5, 0.5),resolution=figureSize)
+    numRows = length(scaffoldInRow)
+    # make one axis object per row:
+    axs = [Axis(f[i, 1]) for i in 1:numRows]
+    for i in 1:numRows
+        hidedecorations!(axs[i]) #hide background lattice and axis labels
+        hidespines!(axs[i]) # hide box around plot
+    end
+    display(f)
 
-  
-  # make plot order by row
-  inch.per.row <- (window.width-(left.margin+right.margin)*window.width)
-  bp.per.row <- bp.per.inch * inch.per.row
-  row <- 1
-  chr.in.row <- matrix(NA, 20, 20)
-  chr.bp.start.in.row <- matrix(NA, 20, 20)
-  bp.start <- 0
-  remaining.row.length <- bp.per.row
-  while (sum(chr.plotted.already==FALSE) > 0) {  # repeat until all chr have a row to be plotted in
-    place.in.row <- 1
-    # look through chromosomes
-    for (i in 1:length(chromosomes.to.plot)) {
-      # if not plotted and short enough, add to row:
-      if (chr.plotted.already[i]==FALSE && chr.length[i]<=remaining.row.length) {
-        chr.in.row[row, place.in.row] <- chromosomes.to.plot[i]
-        chr.bp.start.in.row[row, place.in.row] <- bp.start
-        remaining.row.length <- remaining.row.length - chr.length[i] - gap.between.chr.bp
-        chr.plotted.already[i] <- TRUE
-        place.in.row <- place.in.row+1
-        bp.start <- bp.start + chr.length[i] + gap.between.chr.bp
-      }		
+    for rowNum in 1:numRows
+        numScaffoldsInRow = length(scaffoldInRow[rowNum])
+        for orderNum in 1:numScaffoldsInRow 
+            scaffoldName = scaffoldInRow[rowNum][orderNum]
+            plotBpLength = scaffold_lengths[scaffolds_to_plot .== scaffoldName]
+            # select one scaffold from the whole genome:
+            selection = windowed_pos_all.chrom .== scaffoldName 
+            windowed_pos_selected = view(windowed_pos_all.mean_position, selection)
+            windowed_Fst_selected = view(windowed_Fst_all, :, selection)
+
+            #CairoMakie.poly!(axs[1], Point2f.([0, 0, 1, 1], [0, 1, 1,0]), color=:red)         
+            for j in 1:length(groupsToPlotFst) 
+                xx = vcat(first(windowed_pos_selected), windowed_pos_selected, last(windowed_pos_selected))
+                FstRow = findfirst(pairwiseNamesFst .== groupsToPlotFst[j])
+                yy = vcat(0, windowed_Fst_selected[FstRow, :], 0)
+                poly!(axs[rowNum], Point2f.(xx, yy), color = groupColorsFst[j])
+            end
+        end
+    end
+    display(f)
+ 
+
+#########
+
+plot(x=NULL, y=NULL, xlim=c(0, plot.bp.length), ylim=c(0, 1.2), yaxp=c(0, 1, n=1), ylab=expression(italic('F')[ST]*"  "), xlab=NA, xaxt='n', bty='n', las=1, xaxs="i", tcl=-0.25, xpd=NA, cex=1, cex.lab=1.55, cex.axis=0.75)
+            text(-2000000, 1.4, chr.in.row[row.num,order.num], pos=4, cex=2, xpd=NA)
+
+
+
+
+    # Set up the plot window:
+    f = CairoMakie.Figure(resolution=figureSize)
+    ax = Axis(f[1, 1],
+        title=string(regionText, ": genotypes Fst>", Fst_cutoff, " loci between ", groupsToCompare),
+        # xlabel = "location",
+        # ylabel = "individual",
+        titlesize=30,
+        limits=(0.5 - 0.09 * (num_SNPs_to_plot + 0.5), 1.09 * (num_SNPs_to_plot + 0.5),
+            0.5 - 0.3 * numInds, numInds + 1)
+    )
+    hidedecorations!(ax) # hide background lattice and axis labels
+    hidespines!(ax) # hide box around plot
+
+  #######
+
+  quartz(title="WC84_Fst, Dxy, and pi for all chromosomes", width=window.width, height=window.height)  # width and height in inches
+  # plot(x=NULL, y=NULL, xlim=c(0,1), ylim=c(0,1), xaxt='n', yaxt='n', xlab=NULL, ylab= NULL, bty='n', las=1)
+  Sys.sleep(0.1)  # this is to prevent a bug
+  num.rows <- sum(!is.na(chr.in.row[,1]))
+  new.fig.parameter <- FALSE
+  for (row.num in 1:num.rows) {
+    num.chr.in.row <- sum(!is.na(chr.in.row[row.num,]))
+    for (order.num in 1:num.chr.in.row) {
+      chr.text <- paste0("Chr",chr.in.row[row.num,order.num], "_whole", sep="")
+      #load(paste0("~/Dropbox/Darren's current work/genomics training 2014/GW_genomics_Darren/GW_SNP_summary_stats_by_chromosome_from_R/GW_SNP_RollingMean_stats_",load.text,"_from_R.R"))
+      load(paste0(base.name,tag.name,chr.text,"_window",window_size,"_WindowStats_from_R.R"))
+      print(paste0("Loaded saved rolling mean stats for Chr ", chr.in.row[row.num,order.num], sep=""))
+      plot.bp.length <- chr.length[chromosomes.to.plot==chr.in.row[row.num,order.num]]
+      # plot WC84_Fst:
+      fig.left.loc <- left.margin + (chr.bp.start.in.row[row.num,order.num]/bp.per.row)*(inch.per.row/window.width)   
+      fig.right.loc <- fig.left.loc + (plot.bp.length/bp.per.row)*(inch.per.row/window.width)
+      par(fig=c(fig.left.loc, fig.right.loc, 1-(top.margin+plot.height+(row.num-1)*(row.height+row.space)), 1-(top.margin+(row.num-1)*(row.height+row.space))), new = new.fig.parameter, mai=c(0,0,0,0), cex=0.5)  # mai sets the margins of the plot to zero, matching
+      new.fig.parameter <- TRUE
+      #upper.xlim <- bp.per.inch*(window.width-(left.margin+right.margin)*window.width)
+      plot(x=NULL, y=NULL, xlim=c(0, plot.bp.length), ylim=c(0, 1.2), yaxp=c(0, 1, n=1), ylab=expression(italic('F')[ST]*"  "), xlab=NA, xaxt='n', bty='n', las=1, xaxs="i", tcl=-0.25, xpd=NA, cex=1, cex.lab=1.55, cex.axis=0.75)
+      text(-2000000, 1.4, chr.in.row[row.num,order.num], pos=4, cex=2, xpd=NA)
+      for (j in 1:length(groups.to.plot.WC84_Fst)) {
+        color.rgb <- col2rgb(group.colors.WC84_Fst[j]) /255   # divide to convert color scales to 0-1
+        lines(rolling.mean.pos.WC84_Fst, rolling.mean.WC84_Fst[rownames(rolling.mean.WC84_Fst)==groups.to.plot.WC84_Fst[j],],
+              col=rgb(color.rgb[1], color.rgb[2], color.rgb[3], alpha=line_transparency))
+        xx <- c(rolling.mean.pos.WC84_Fst[1], rolling.mean.pos.WC84_Fst, rolling.mean.pos.WC84_Fst[length(rolling.mean.pos.WC84_Fst)])
+        yy <- c(0, rolling.mean.WC84_Fst[rownames(rolling.mean.WC84_Fst)==groups.to.plot.WC84_Fst[j],], 0)
+        polygon(xx, yy, col=rgb(color.rgb[1], color.rgb[2], color.rgb[3], alpha=transparency_Fst_Dxy), border=NA)
+      }
+      # plot Dxy:
+      y_label <- expression(pi[B]*"    ")                     # y_label <- expression(italic('D')[xy]*"    ")
+      par(fig=c(fig.left.loc, fig.right.loc, 1-(top.margin+2*plot.height+(row.num-1)*(row.height+row.space)), 1-(top.margin+plot.height+(row.num-1)*(row.height+row.space))), new = TRUE, mai=c(0,0,0,0))  # mai sets the margins of the plot to zero, matching
+      plot(x=NULL, y=NULL, xlim=c(0, plot.bp.length), ylim=c(0, max_Dxy_axis), yaxp=c(0, max_Dxy_axis*5/8, n=1), ylab=y_label, xlab=NA, xaxt='n', bty='n', las=1, xaxs="i", tcl=-0.25, xpd=NA, cex.lab=1.5, cex.axis=0.75)  # 
+      for (j in 1:length(groups.to.plot.Dxy)) {
+        color.rgb <- col2rgb(group.colors.Dxy[j]) /255   # divide to convert color scales to 0-1
+        lines(rolling.mean.pos.Dxy, rolling.mean.Dxy[rownames(rolling.mean.Dxy)==groups.to.plot.Dxy[j],], 
+              col=rgb(color.rgb[1], color.rgb[2], color.rgb[3], alpha=line_transparency))
+        xx <- c(rolling.mean.pos.Dxy[1], rolling.mean.pos.Dxy, rolling.mean.pos.Dxy[length(rolling.mean.pos.Dxy)])
+        yy <- c(0, rolling.mean.Dxy[rownames(rolling.mean.Dxy)==groups.to.plot.Dxy[j],], 0)
+        polygon(xx, yy, col=rgb(color.rgb[1], color.rgb[2], color.rgb[3], alpha=transparency_Fst_Dxy), border=NA)
+      }
+      # plot pi: 
+      par(fig=c(fig.left.loc, fig.right.loc, 1-(top.margin+3*plot.height+(row.num-1)*(row.height+row.space)), 1-(top.margin+2*plot.height+(row.num-1)*(row.height+row.space))), new = TRUE, mai=c(0,0,0,0))  # mai sets the margins of the plot to zero, matching
+      plot(x=NULL, y=NULL, xlim=c(0, plot.bp.length), ylim=c(0, max_pi_axis), yaxp=c(0, max_pi_axis*5/8, n=1), ylab=expression(pi[W]*"    "), xlab=NA, xaxt='n', bty='n', las=1, xaxs="i", tcl=-0.25, xpd=NA, cex.lab=1.5, cex.axis=0.75)
+      title(xlab="Location", outer=TRUE)
+      for (j in 1:length(groups.to.plot.pi)) {
+        color.rgb <- col2rgb(group.colors.pi[j]) /255   # divide to convert color scales to 0-1
+        lines(rolling.mean.pos.pi, rolling.mean.pi[rownames(rolling.mean.pi)==groups.to.plot.pi[j],], 
+              col=rgb(color.rgb[1], color.rgb[2], color.rgb[3], alpha=line_transparency))
+        xx <- c(rolling.mean.pos.pi[1], rolling.mean.pos.pi, rolling.mean.pos.pi[length(rolling.mean.pos.pi)])
+        yy <- c(0, rolling.mean.pi[rownames(rolling.mean.pi)==groups.to.plot.pi[j],], 0)
+        polygon(xx, yy, col=rgb(color.rgb[1], color.rgb[2], color.rgb[3], alpha=transparency_pi), border=NA)
+      }
     }
-    row <- row+1
-    bp.start <- 0
-    remaining.row.length <- bp.per.row
   }
 
 end
